--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "watch:eleventy": "eleventy --serve",
     "build:eleventy": "eleventy",
     "start": "npm-run-all build:sass --parallel watch:*",
-    "build": "npm-run-all build:*"
+    "build": "npm-run-all build:*",
+    "deploy": "gh-pages -d src/_site",
+    "homepage": "/"
   },
   "repository": {
     "type": "git",
@@ -35,6 +37,7 @@
     "@shopify/stylelint-plugin": "^10.0.1",
     "babel-core": "6.26.3",
     "eslint": "^7.12.1",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.1.2",
     "stylelint": "^13.8.0",
     "stylelint-scss": "^3.18.0"
