--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
+    "axios": "^0.21.0",
     "luxon": "^1.25.0",
     "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.2",
