Show representation of object without name

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,8 @@
   "extends": [
     "plugin:@shopify/esnext",
     "plugin:@shopify/prettier"
-  ]
+  ],
+  "rules": {
+    "no-console": "off"
+  }
 }
