--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "watch:sass": "sass --watch src/sass:public/css",
-    "build:sass": "sass src/sass:public/css",
+    "watch:sass": "sass --watch src/sass:docs/css",
+    "build:sass": "sass src/sass:docs/css",
     "watch:eleventy": "eleventy --serve",
     "build:eleventy": "eleventy",
     "start": "npm-run-all build:sass --parallel watch:*",
-    "build": "npm-run-all build:*",
-    "deploy": "gh-pages -d src/_site",
-    "homepage": "/"
+    "build": "npm-run-all build:*"
   },
   "repository": {
     "type": "git",
