--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,11 +1,12 @@
 {
   "plugins": [
-    "stylelint-scss"
+    "stylelint-scss",
+    "stylelint-prettier"
   ],
   "rules": {
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true,
     "color-no-invalid-hex": true,
-    "color-no-hex": false
+    "prettier/prettier": true
   }
 }
