--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "babel-core": "6.26.3",
     "eslint": "^7.12.1",
     "gh-pages": "^3.1.0",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "stylelint": "^13.8.0",
+    "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.18.0"
   },
   "babel": {
