--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,8 +5,7 @@
   ],
   "rules": {
     "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": true,
     "color-no-invalid-hex": true,
-    "prettier/prettier": true
+    "prettier/prettier": true,
   }
 }
